# VIO_ship_gazebo_simulator

./: .gitignore  CMakeLists.txt  README.md  package.xml  useful.txt
config/: bridge_config.yaml  circle.yaml  circle_speed.yaml  ekf_odom.yaml  explore_lite_params.yaml  line.yaml  nav2_params.yaml  rtabmap.rviz  rtabmap_params.yaml  stereo_params.yaml  trajectory.yaml  trajectory_speed.yaml  world_objects.yaml
include/ship_gazebo/: ShipMotionPlugin.hh
launch/: analyze_sim.launch.py  record.launch.py  replay.launch.py  ship_sim.launch.py  view_map.launch.py
models/: ship_corridor.dae  ship_corridor.stl  ship_large_corridor.stl  vessel_solid.dae  vessel_solid.stl  vessel_solid_thin.dae  vessel_solid_thin.stl
models/turtlebot3_stereo/: model.sdf
src/: ShipMotionPlugin.cc  cmd_vel_pub.py  ground_truth_odometry.py  imu_comparator.py  imu_compensator.py  map_analyzer.py  odom_comparator.py  plot_odom_comparison.py  reset_localization.py  rgbd_image_relay.py  stereo_odom_tf_publisher.py  traj_recorder.py
tools/: STL_dimension.py  fft_IMU_analyzer.py  imu_comparator.py  imu_comparison.csv  imu_comparison.py  lib_batch_runs.sh  nohup.out  plot_imu_csv.py  plot_odom_comparison.py  plot_odom_csv.py  run_motion_circle.sh  run_motion_circle_speed.sh  run_motion_line.sh  run_motion_trajectory.sh  run_motion_trajectory_speed.sh  show_maps_metrics.py  show_odom_metrics.py
tools/data/: imu_comparison_27_03_26.csv  imu_comparison_31_03_26.csv  (+2 more)
worlds/: ship_world_dynamic.sdf  ship_world_dynamic.sdf.em  ship_world_dynamic_NoObs.sdf.em  ship_world_fixed.sdf
